HW03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otusapp-service
  labels:
    app: otusapp
spec:
  selector:
    app: otusapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
